ansible/roles/juice-shop/templates/deployment-juice-shop.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: juice-shop
  namespace: default
spec:
  selector:
    matchLabels:
      app: juice-shop
  replicas: 3
  template:
    metadata:
      labels:
        app: juice-shop
    spec:
      containers:
        - name: juice-shop
          image: bkimminich/juice-shop:v10.3.2
          ports:
            - containerPort: 3000
