ansible/roles/juice-shop/templates/service-juice-shop.yml
apiVersion: v1
kind: Service
metadata:
  name: juice-shop
  namespace: default
  labels:
    app: juice-shop
spec:
  ports:
  - name: juice-shop
    port: 8080
    protocol: TCP
    targetPort: 3000
  type: ClusterIP
  selector:
    app: juice-shop
